--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -2,6 +2,7 @@
     position: relative;
     display: block;
     width: 100%;
+    padding: 0;
 }
 #slider {
     position: relative;
@@ -11,6 +12,9 @@
     min-height: 500px;
 }
 #slider li {
+    display: grid;
+    place-items: center;
+    padding: 7em;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -19,7 +23,6 @@
     left: 0 !important;
     width: 100%;
     height: 100%;
-    display: block;
     -webkit-transition: opacity 1s;
     -moz-transition: opacity 1s;
     -ms-transition: opacity 1s;
@@ -27,6 +30,24 @@
     transition: opacity 1s;
     z-index: -1;
     opacity: 0;
+}
+#slider li h2 {
+    color: white;
+    font-size: 2em;
+    margin: 0;
+}
+@media only screen and (max-width: 600px) {
+    #slider li h2 {
+        font-size: 1.5em;
+    }
+}
+@media only screen and (max-width: 400px) {
+    #slider li h2 {
+        font-size: 1.1em;
+    }
+    #slider li {
+        padding: 4em;
+    }
 }
 #container-slider .arrowPrev, #container-slider .arrowNext{
     font-size: 30pt;
