--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -15,8 +15,21 @@
     padding: 1em;
 }
 
+.max-width-600 {
+    max-width: 600px;
+    margin: 1em auto;
+    padding: 1em;
+}
+
 .margin-vertical {
     margin: 3em auto;
+}
+
+.align-left-headings h1,
+.align-left-headings h2,
+.align-left-headings h3 {
+    text-align: left;
+    margin-left: 0;
 }
 
 .section-max-width {
